<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView android:id="@+id/ivAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/mediumSpace"/>

        <EditText
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_user"
            android:drawablePadding="@dimen/mediumSpace"
            android:hint="@string/text_fullname"
            android:padding="@dimen/mediumSpace"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/mediumFontSize" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/largeSpace"
            android:drawableLeft="@drawable/icon_email"
            android:drawablePadding="@dimen/mediumSpace"
            android:padding="@dimen/mediumSpace"
            android:text="@string/text_email"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/mediumFontSize" />

        <EditText
            android:id="@+id/tvPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/largeSpace"
            android:drawableLeft="@drawable/ic_phone"
            android:drawablePadding="@dimen/mediumSpace"
            android:hint="@string/text_phone"
            android:inputType="phone"
            android:padding="@dimen/mediumSpace"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/mediumFontSize" />

        <EditText
            android:id="@+id/tvAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/largeSpace"
            android:drawableLeft="@drawable/ic_address"
            android:drawablePadding="@dimen/mediumSpace"
            android:hint="@string/text_address"
            android:padding="@dimen/mediumSpace"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/mediumFontSize" />

    </LinearLayout>

    <Button
        android:id="@+id/btnChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/text_change_password"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnChangePassword"
        android:layout_marginBottom="@dimen/mediumSpace"
        android:background="@color/colorPrimary"
        android:text="@string/text_update"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite" />

</RelativeLayout>