<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivDish1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentRight="true"
        android:src="@drawable/dish" />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivDish1"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/xxxLargeFontSize"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvAppSlogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvAppName"
        android:layout_alignStart="@id/tvAppName"
        android:text="@string/text_instant_food_delivery"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/mediumFontSize" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvAppSlogan"
        android:layout_marginLeft="@dimen/largeSpace"
        android:layout_marginTop="@dimen/largeSpace"
        android:layout_toLeftOf="@id/btnForgot"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/icon_email"
        android:drawablePadding="@dimen/mediumSpace"
        android:inputType="textEmailAddress"
        android:hint="@string/text_email"
        android:padding="@dimen/mediumSpace"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorTextHint"
        android:textSize="@dimen/mediumFontSize" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/txtEmail"
        android:layout_alignStart="@id/txtEmail"
        android:layout_alignEnd="@id/txtEmail"
        android:layout_marginLeft="@dimen/xLargeSpace"
        android:background="@color/colorBlack" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtEmail"
        android:layout_marginLeft="@dimen/largeSpace"
        android:layout_marginTop="@dimen/mediumSpace"
        android:layout_toLeftOf="@id/btnForgot"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/icon_lock"
        android:drawablePadding="@dimen/mediumSpace"
        android:hint="@string/text_password"
        android:inputType="textPassword"
        android:padding="@dimen/mediumSpace"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorTextHint"
        android:textSize="@dimen/mediumFontSize" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/txtPassword"
        android:layout_alignStart="@id/txtPassword"
        android:layout_alignEnd="@id/txtPassword"
        android:layout_marginLeft="@dimen/xLargeSpace"
        android:background="@color/colorBlack" />

    <Button
        android:id="@+id/btnForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtEmail"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="@dimen/smallSpace"
        android:layout_marginTop="@dimen/mediumSpace"
        android:layout_marginRight="@dimen/largeSpace"
        android:background="@android:color/transparent"
        android:text="@string/text_forgot"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/mediumFontSize"
        android:textStyle="normal" />

    <LinearLayout
        android:id="@+id/layoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtPassword"
        android:layout_alignLeft="@id/txtEmail"
        android:layout_alignRight="@id/btnForgot"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mediumSpace"
            android:layout_marginEnd="@dimen/smallSpace"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:paddingLeft="@dimen/smallSpace"
            android:paddingRight="@dimen/smallSpace"
            android:text="@string/text_sign_in"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/mediumFontSize"
            android:textStyle="normal" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/smallSpace"
            android:layout_marginTop="@dimen/mediumSpace"
            android:layout_weight="1"
            android:background="@drawable/bg_green_border_button"
            android:paddingLeft="@dimen/smallSpace"
            android:paddingRight="@dimen/smallSpace"
            android:text="@string/text_sign_up"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/mediumFontSize"
            android:textStyle="normal" />
    </LinearLayout>

    <TextView
        android:id="@+id/btnSignInFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutButtons"
        android:layout_alignLeft="@id/layoutButtons"
        android:layout_marginTop="@dimen/mediumSpace"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/icon_facebook"
        android:drawablePadding="@dimen/mediumSpace"
        android:padding="@dimen/smallSpace"
        android:text="@string/text_sign_in_facebook"
        android:textAllCaps="false"
        android:textColor="@color/colorLightBlack"
        android:textSize="@dimen/mediumFontSize"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/btnSignInGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSignInFacebook"
        android:layout_alignLeft="@id/layoutButtons"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/icon_google"
        android:layout_marginTop="@dimen/mediumSpace"
        android:drawablePadding="@dimen/mediumSpace"
        android:text="@string/text_sign_in_google"
        android:textAllCaps="false"
        android:padding="@dimen/smallSpace"
        android:textColor="@color/colorLightBlack"
        android:textSize="@dimen/mediumFontSize"
        android:textStyle="normal" />

    <ImageView
        android:id="@+id/ivDish2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:src="@drawable/dish_2" />

</RelativeLayout>